--- a/src/elements/guuey-new-goal-modal/guuey-new-goal-modal.html
+++ b/src/elements/guuey-new-goal-modal/guuey-new-goal-modal.html
@@ -17,7 +17,8 @@
 
   <style include="paper-dialog-shared-styles">
   :host{
-    width:600px;
+    overflow-y:auto;
+    overflow-x:hidden;
   }
   .padded{
     padding:20px;
