--- a/src/elements/media-queries/media-queries.html
+++ b/src/elements/media-queries/media-queries.html
@@ -30,6 +30,21 @@
       query-matches="{{dimensions.query1919}}">
     </iron-media-query>
 
+    <iron-media-query
+      query="max-height:480px"
+      query-matches="{{dimensions.queryHeight480}}">
+    </iron-media-query>
+
+    <iron-media-query
+      query="max-height:780px"
+      query-matches="{{dimensions.queryHeight780}}">
+    </iron-media-query>
+
+    <iron-media-query
+      query="max-height:1080px"
+      query-matches="{{dimensions.queryHeight1080}}">
+    </iron-media-query>
+
     <style>
 
     </style>
