--- a/src/pages/admin/ad-payment.html
+++ b/src/pages/admin/ad-payment.html
@@ -21,6 +21,7 @@
 
 <link rel="import" href="../../behaviors/animations/admin-pages-animation.html" />
 <link rel="import" href="../../behaviors/admin-resize-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -513,7 +514,8 @@
         },
         behaviors:[
           Polymer.adminPagesAnimation,
-          Polymer.adminResizeBehavior
+          Polymer.adminResizeBehavior,
+          Polymer.guueyDialogResizeBehavior
         ],
         _initStripe: function() {
           if (!!!this.Stripe)
