--- a/src/pages/admin/ad-users.html
+++ b/src/pages/admin/ad-users.html
@@ -19,6 +19,7 @@
 
 <link rel="import" href="../../behaviors/animations/admin-pages-animation.html" />
 <link rel="import" href="../../behaviors/admin-resize-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -359,7 +360,8 @@
 
       behaviors: [
         Polymer.adminPagesAnimation,
-        Polymer.adminResizeBehavior
+        Polymer.adminResizeBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       userOptions: function(e) {
