--- a/src/pages/care-plan/su-care-review.html
+++ b/src/pages/care-plan/su-care-review.html
@@ -14,6 +14,7 @@
 <link rel="import" href="../../behaviors/fab-animation-behavior.html" />
 <link rel="import" href="../../behaviors/su-print-behavior.html" />
 <link rel="import" href="../../behaviors/su-resize-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -201,7 +202,8 @@
         Polymer.carePlanAnimation,
         Polymer.fabAnimationBehavior,
         Polymer.suPrintBehavior,
-        Polymer.suResizeBehavior
+        Polymer.suResizeBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       initNotify: function() {
