--- a/src/pages/care-plan/su-goals-multi-view.html
+++ b/src/pages/care-plan/su-goals-multi-view.html
@@ -19,6 +19,7 @@
 <link rel="import" href="../../behaviors/multi-view-resize-behavior.html" />
 <link rel="import" href="../../behaviors/multi-edit-animation-behavior.html" />
 <link rel="import" href="../../behaviors/multi-view-grid-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -164,7 +165,8 @@
       behaviors: [
         Polymer.multiViewResizeBehavior,
         //Polymer.multiEditAnimationBehavior,
-        Polymer.multiViewGridBehavior
+        Polymer.multiViewGridBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       editGoal: function(e) {
