--- a/src/pages/care-plan/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk-multi-view.html
@@ -18,6 +18,7 @@
 <link rel="import" href="../../behaviors/multi-edit-animation-behavior.html" />
 <link rel="import" href="../../behaviors/multi-view-resize-behavior.html" />
 <link rel="import" href="../../behaviors/multi-view-grid-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -175,8 +176,9 @@
 
       behaviors: [
         Polymer.multiViewResizeBehavior,
-        Polymer.multiViewGridBehavior
-        //Polymer.multiEditAnimationBehavior
+        Polymer.multiViewGridBehavior,
+        //Polymer.multiEditAnimationBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       _computeQueryCount: function(risk) {
