--- a/src/pages/default/def-home.html
+++ b/src/pages/default/def-home.html
@@ -16,6 +16,7 @@
 <link rel="import" href="../../behaviors/animations/default-pages-animation.html" />
 <link rel="import" href="../../behaviors/default-resize-behavior.html" />
 <link rel="import" href="../../behaviors/trial-restriction-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -402,7 +403,8 @@
       behaviors: [
         Polymer.defPagesAnimation,
         Polymer.defaultResizeBehavior,
-        Polymer.trialRestrictionBehavior
+        Polymer.trialRestrictionBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       //create new patient set as archived. changed to active when all fields are filled out on following su-create page
