--- a/src/pages/test/test-test.html
+++ b/src/pages/test/test-test.html
@@ -46,7 +46,7 @@
         },
 
         testLocation: function() {
-          location.href = 'http://localhost:8080/-KTBXzZw3-qoZz4c7nY7/test/test-test?mode=resetPassword&oobCode=dicks';
+          location.href = 'http://localhost:8080/-KTBXzZw3-qoZz4c7nY7/test/test-test?mode=resetPassword&oobCode=whatever';
         }
 
       });
