--- a/src/pages/care-plan/su-care-review-multi-view.html
+++ b/src/pages/care-plan/su-care-review-multi-view.html
@@ -14,6 +14,7 @@
 
 <link rel="import" href="../../behaviors/multi-view-resize-behavior.html" />
 <link rel="import" href="../../behaviors/multi-view-grid-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -86,7 +87,7 @@
       ready:function(){
         this.addEventListener("truncate-read-more", this._readMore)
       },
-      
+
       properties: {
 
         dimensions: {
@@ -107,8 +108,8 @@
 
       behaviors:[
         Polymer.multiViewResizeBehavior,
-        Polymer.multiViewGridBehavior
-        //Polymer.multiEditAnimationBehavior
+        Polymer.multiViewGridBehavior,
+        Polymer.guueyDialogResizeBehavior
       ],
 
       toggleEditModal: function(e) {
