--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -191,8 +191,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color:#009688;
         padding:10px;
       }
-      .guuey-modal{
-        width:600px;
+      .guuey-modal {
+        overflow-y: auto;
+        overflow-x: hidden;
         --paper-dialog:{
           :host{
             margin:0;
@@ -204,7 +205,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       .guuey-modal *{
-        padding:20px;
+        padding:10px;
       }
       .guuey-modal .cancel-button{
         color:inherit;
